@@ -98,6 +98,10 @@
     #define WP_CLOSEBUTTON 18
     #define WP_RESTOREBUTTON 21
     #define WP_HELPBUTTON 23
+
+    #define PP_BAR 1
+    #define PP_CHUNK 3
+
 #endif
 
 #if defined(__WXWINCE__)
@@ -203,6 +207,13 @@ public:
                                     wxTitleBarButton button,
                                     int flags = 0);
 
+    virtual void DrawGauge(wxWindow* win,
+                           wxDC& dc,
+                           const wxRect& rect,
+                           int value,
+                           int max,
+                           int flags = 0);
+
     virtual wxSize GetCheckBoxSize(wxWindow *win);
 
     virtual int GetHeaderButtonHeight(wxWindow *win);
@@ -307,6 +318,14 @@ public:
                                     const wxRect& rect,
                                     wxTitleBarButton button,
                                     int flags = 0);
+
+    virtual void DrawGauge(wxWindow* win,
+                           wxDC& dc,
+                           const wxRect& rect,
+                           int value,
+                           int max,
+                           int flags = 0);
+
 
     virtual wxSplitterRenderParams GetSplitterParams(const wxWindow *win);
 
@@ -595,6 +614,25 @@ void wxRendererMSW::DrawTextCtrl(wxWindow* WXUNUSED(win),
     dc.DrawRectangle(rect);
 }
 
+void wxRendererMSW::DrawGauge(wxWindow* win,
+                              wxDC& dc,
+                              const wxRect& rect,
+                              int value,
+                              int max,
+                              int WXUNUSED(flags))
+{
+    // Use text ctrl back as background
+    DrawTextCtrl(win, dc, rect);
+
+    // Calc progress bar size
+    wxRect progRect(rect);
+    progRect.Deflate(2);
+    progRect.SetWidth(progRect.GetWidth() * ((double)value / max));
+
+    dc.SetBrush(wxSystemSettings::GetColour(wxSYS_COLOUR_HIGHLIGHT));
+    dc.SetPen(*wxTRANSPARENT_PEN);
+    dc.DrawRectangle(progRect);
+}
 
 // ============================================================================
 // wxRendererXP implementation
@@ -886,6 +924,51 @@ void wxRendererXP::DrawTextCtrl(wxWindow* win,
     dc.SetPen( bdr );
     dc.SetBrush( fill );
     dc.DrawRectangle(rect);
+}
+
+void wxRendererXP::DrawGauge(wxWindow* win,
+    wxDC& dc,
+    const wxRect& rect,
+    int value,
+    int max,
+    int flags)
+{
+    wxUxThemeHandle hTheme(win, L"PROGRESS");
+    if ( !hTheme )
+    {
+        m_rendererNative.DrawGauge(win, dc, rect, value, max, flags);
+        return;
+    }
+
+    RECT r;
+    wxCopyRectToRECT(rect, r);
+
+    wxUxThemeEngine::Get()->DrawThemeBackground(
+        hTheme,
+        GetHdcOf(dc.GetTempHDC()),
+        PP_BAR,
+        0,
+        &r,
+        NULL);
+
+    RECT contentRect;
+    wxUxThemeEngine::Get()->GetThemeBackgroundContentRect(
+        hTheme,
+        GetHdcOf(dc.GetTempHDC()),
+        PP_BAR,
+        0,
+        &r,
+        &contentRect);
+
+    contentRect.right = contentRect.left + (contentRect.right - contentRect.left) * ((double)value / max);
+
+    wxUxThemeEngine::Get()->DrawThemeBackground(
+        hTheme,
+        GetHdcOf(dc.GetTempHDC()),
+        PP_CHUNK,
+        0,
+        &contentRect,
+        NULL);
 }
 
 // ----------------------------------------------------------------------------
